# libfw-core

./: CMakeLists.txt
include/flyingwhales/: core.hpp  platform.hpp
include/flyingwhales/core/: noncopyable.hpp
